bootstrap/argo-cd/deployment-restart-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      annotations:
        argocd.argoproj.io/insecure-restart: "true"
