bootstrap/argo-cd/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    metadata:
      annotations:
        argocd-cm-hash: "dummy"  # Kustomize will replace this with a hash ConfigMaps
