bootstrap/argo-cd/patch-argocd-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  ports:
  - name: https
    $patch: delete
  - name: http
    port: 80
