bootstrap/argo-cd/service-remove-https-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
